pyinstaller本地软件，解除了许多功能限制

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,9 @@ var _hmt = _hmt || [];
       <div class="mdui-collapse-item-body mdui-list">
         <a href="https://github.com/LanceLiang2018/Wenku8ToEpub-Online" class="mdui-list-item mdui-ripple">关于</a>
       </div>
+      <div class="mdui-collapse-item-body mdui-list">
+        <a href="https://lanceliang2018.github.io/" class="mdui-list-item mdui-ripple">我的博客</a>
+      </div>
     </div>
   </div>
 </div>
@@ -98,7 +101,7 @@ var _hmt = _hmt || [];
                   <div class="mdui-card-content mdui-typo"><p class="wenku8-search-brief">简介</p></div>
                   <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme-accent wenku8-btn-1" onclick="">下载</button>
                   <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent wenku8-btn-2" onclick="">缓存</button>
-<!--                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent wenku8-btn-3" onclick="">缓存(带图片)</button>-->
+                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent wenku8-btn-3" onclick="">缓存(带图片)</button>
               </div>
             <div id="wenku8-search">
             </div>
@@ -129,7 +132,7 @@ var _hmt = _hmt || [];
                   <div class="mdui-card-content mdui-typo"><p id="wenku8-bookinfo-brief">简介</p></div>
                   <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme-accent" onclick="wenku8Fun1_1()">下载</button>
                   <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_2()">缓存</button>
-<!--                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_3()">缓存(带图片)</button>-->
+                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_3()">缓存(带图片)</button>
               </div>
             </div>
             <div class="mdui-textfield mdui-textfield-floating-label">
@@ -140,7 +143,6 @@ var _hmt = _hmt || [];
             <br><br>
             <p>输入：ID号，显示书籍信息。ID号是打开wenku8网站后地址栏最后一个数字。比如<a target="_blank" href="https://www.wenku8.net/book/2255.htm">魔女之旅</a>的ID为<code>2255</code>。这里显示书籍信息后也可以直接下载。</p>
         </div>
-<!--
         <div>
             <h4 class="mdui-text-color-theme-accent">直接下载小说</h4>
             <div class="mdui-textfield mdui-textfield-floating-label">
@@ -151,7 +153,6 @@ var _hmt = _hmt || [];
             <br><br>
             <p>输入：ID号或者小说名，将会从缓存直接下载小说的EPUB文件。腾讯云速度保证。</p>
         </div>
--->
         <div class="mdui-card" style="padding:20px 20px">
           <div class="mdui-card-content mdui-typo" id="wenku8-fun3-logs-outline">
 <!--              <div id="wenku8-fun3-logs">进度显示</div>-->
@@ -184,22 +185,21 @@ var _hmt = _hmt || [];
             <br><br>
             <p>输入：ID号，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容，更新完毕就会返回下载链接，开始下载。</p>
         </div>
-<!--
         <div>
-            <h4 class="mdui-text-color-theme-accent">开始缓存到腾讯云对象储存（包含图片）</h4>
+            <h4 class="mdui-text-color-theme-accent">开始下载（包含图片）</h4>
             <div class="mdui-textfield mdui-textfield-floating-label">
               <label class="mdui-textfield-label">ID</label>
               <input class="mdui-textfield-input" id="wenku8-fun4-text"/>
             </div>
             <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun4()">GO</button>
             <br><br>
-            <p>输入：ID号，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容到缓存中，更新完毕就会返回下载链接，开始下载。</p>
-            <p>注意：有上传/压缩失败的可能。如果进度显示部分没有上传文件的记录，则很可能已经失败了，请多试几次，或者使用本地软件。如果只是上传失败，则会返回临时链接，此时下载较慢，推荐使用迅雷下载或者搭个梯子。由于文件太大，上传失败率很高。</p>
+            <p>输入：ID号。本地版专属（？）功能。</p>
         </div>
--->
         <h3 class="mdui-text-color-theme">相关软件下载</h3>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wenku8toepub.exe">Wenku8ToEpub.exe</a>：本地命令行软件，能够下载更大的书籍，大概速度更快（看你的网速了）。<a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/Wenku8%E4%B8%8B%E8%BD%BD_1.1.apk">Wenku8下载.apk</a>：把这个网页转换成手机应用程序。有ID号提取功能。<br>
+        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wk8local.exe">wk8local.exe</a>：大小57MB。是本网页的本地版，没有服务器带宽限制，能够下载电子书图片，推荐下载。<br>
+        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wenku8toepub.exe">Wenku8ToEpub.exe</a>：大小8MB。本地命令行软件，能够下载更大的书籍，但是使用不是很人性化。
+        <a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
+        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/Wenku8%E4%B8%8B%E8%BD%BD_1.1.apk">Wenku8下载.apk</a>：把这个网页转换成手机应用程序。左右滑动方便找书。<br>
         <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90%E4%B8%8B%E8%BD%BD%E5%99%A8_1.2.apk">网易云音乐下载器.apk</a>：能够按单曲/歌单下载网易云vip歌曲，但是付费歌曲暂时下载不能。<br>
         <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/%E6%96%B9%E5%AF%B8%E4%B9%8B%E9%97%B4_2.31.apk">方寸之间.apk</a>：聊天软件(笑)。有音乐下载、聊天、网盘储存等等功能。<br>
         
@@ -230,22 +230,18 @@ var _hmt = _hmt || [];
             <input type="hidden" name="method" value="name">
             <input class="button" type="submit" value="按名字搜书"><input name="search_key" type="text"><br>
         </form>
-<!--
         <form action="/search" method="get">
             <input type="hidden" name="method" value="id">
             <input class="button" type="submit" value="按ID找书"><input name="search_key" type="text"><br>
         </form>
--->
         <form action="/search" method="get">
             <input type="hidden" name="method" value="cache">
             <input class="button" type="submit" value="按ID缓存"><input name="search_key" type="text"><br>
         </form>
-<!--
         <form action="/search" method="get">
             <input type="hidden" name="method" value="cache_img">
             <input class="button" type="submit" value="按ID缓存(包含图片)"><input name="search_key" type="text"><br>
         </form>
--->
       </div>
     </div>
 </div>
