--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
   <meta http-equiv="Cache-Control" content="no-siteapp">
   <title>Wenku8轻小说下载器</title>
   <link rel="stylesheet" href="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/css/mdui.css">
-<script src="https://cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/showdown/dist/showdown.min.js"></script>
-<script src="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/cos/cos-js-sdk-v5.min.js"></script>
+<script src="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/using/jquery.min.js"></script>
+<script src="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/using/showdown.min.js"></script>
+<script src="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/using/cos-js-sdk-v5.min.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -99,11 +99,11 @@ var _hmt = _hmt || [];
                   </div>
                   <!-- 卡片的内容 -->
                   <div class="mdui-card-content mdui-typo"><p class="wenku8-search-brief">简介</p></div>
-                  <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme-accent wenku8-btn-1" onclick="">下载</button>
-                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent wenku8-btn-2" onclick="">缓存</button>
-                    {% if local == True %}
-                    <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent wenku8-btn-3" onclick="">缓存(带图片)</button>
-                    {% endif %}
+                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent wenku8-btn-1" onclick="">下载</button>
+                  {% if local == True %}
+                  <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme-accent wenku8-btn-2" onclick="">缓存</button>
+                  <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme-accent wenku8-btn-3" onclick="">缓存(带图片)</button>
+                  {% endif %}
               </div>
             <div id="wenku8-search">
             </div>
@@ -113,7 +113,7 @@ var _hmt = _hmt || [];
             </div>
             <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun5()">GO</button>
             <br><br>
-            <p>输入：搜索用关键词。</p>
+            <p>输入：搜索用关键词（作者或者书名），用关键词搜索更加精确。</p>
         </div>
         <div>
             <h4 class="mdui-text-color-theme-accent">检索书籍信息</h4>
@@ -132,11 +132,11 @@ var _hmt = _hmt || [];
                   </div>
                   <!-- 卡片的内容 -->
                   <div class="mdui-card-content mdui-typo"><p id="wenku8-bookinfo-brief">简介</p></div>
-                  <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme-accent" onclick="wenku8Fun1_1()">下载</button>
-                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_2()">缓存</button>
+                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_4()">下载</button>
                   {% if local == True %}
-                    <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_3()">缓存(带图片)</button>
-                    {% endif %}
+                  <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme-accent" onclick="wenku8Fun1_2()">缓存</button>
+                  <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme-accent" onclick="wenku8Fun1_3()">缓存(带图片)</button>
+                  {% endif %}
               </div>
             </div>
             <div class="mdui-textfield mdui-textfield-floating-label">
@@ -155,7 +155,7 @@ var _hmt = _hmt || [];
             </div>
             <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun2()">GO</button>
             <br><br>
-            <p>输入：ID号或者小说名，将会从缓存直接下载小说的EPUB文件。腾讯云速度保证。</p>
+            <p>输入：ID号或者小说名，将会从缓存直接下载小说的EPUB文件。腾讯云速度保证。标题含有特殊字符将下载错误。</p>
         </div>
         <div class="mdui-card" style="padding:20px 20px">
           <div class="mdui-card-content mdui-typo" id="wenku8-fun3-logs-outline">
@@ -166,19 +166,7 @@ var _hmt = _hmt || [];
           </div>
         </div>
         <a id='wenku8-fun3-url' href="" style="display: none;">下载链接</a>
-<!--
-        <div>
-            <h4 class="mdui-text-color-theme-accent">开始缓存到腾讯云对象储存</h4>
-            <div class="mdui-textfield mdui-textfield-floating-label">
-              <label class="mdui-textfield-label">ID</label>
-              <input class="mdui-textfield-input" id="wenku8-fun3-text"/>
-            </div>
-            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun3()">GO</button>
-            <br><br>
-            <p>输入：ID号，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容到缓存中，更新完毕就会返回下载链接，开始下载。</p>
-            <p>注意：有上传/压缩失败的可能。如果进度显示部分没有上传文件的记录，则很可能已经失败了，请多试几次，或者使用本地软件。如果只是上传失败，则会返回临时链接，此时下载较慢，推荐使用迅雷下载或者搭个梯子。</p>
-        </div>
--->
+        {% if local == True %}
         <div>
             <h4 class="mdui-text-color-theme-accent">开始下载</h4>
             <div class="mdui-textfield mdui-textfield-floating-label">
@@ -189,6 +177,7 @@ var _hmt = _hmt || [];
             <br><br>
             <p>输入：ID号，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容，更新完毕就会返回下载链接，开始下载。</p>
         </div>
+        {% endif %}
         {% if local == True %}
         <div>
             <h4 class="mdui-text-color-theme-accent">开始下载（包含图片）</h4>
@@ -203,22 +192,24 @@ var _hmt = _hmt || [];
         {% endif %}
 
         <h3 class="mdui-text-color-theme">相关软件下载</h3>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wk8local.exe">wk8local.exe</a>：大小57MB。是本网页的本地版，没有服务器带宽限制，能够下载电子书图片，推荐下载。<br>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wenku8toepub.exe">Wenku8ToEpub.exe</a>：大小8MB。本地命令行软件，能够下载更大的书籍，但是使用不是很人性化。
+        <p>下面是时效30分钟的临时链接。</p>
+        <a href="{{urls[0]}}">wk8local.exe</a>：大小57MB。是本网页的本地版，没有服务器带宽限制，能够下载电子书图片，推荐下载。<br>
+        <a href="{{urls[1]}}">Wenku8ToEpub.exe</a>：大小8MB。本地命令行软件，能够下载更大的书籍，但是使用不是很人性化。
         <a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/Wenku8%E4%B8%8B%E8%BD%BD_1.1.apk">Wenku8下载.apk</a>：把这个网页转换成手机应用程序。左右滑动方便找书。<br>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90%E4%B8%8B%E8%BD%BD%E5%99%A8_1.2.apk">网易云音乐下载器.apk</a>：能够按单曲/歌单下载网易云vip歌曲，但是付费歌曲暂时下载不能。<br>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/%E6%96%B9%E5%AF%B8%E4%B9%8B%E9%97%B4_2.31.apk">方寸之间.apk</a>：聊天软件(笑)。有音乐下载、聊天、网盘储存等等功能。<br>
+        <a href="{{urls[2]}}">Wenku8下载_1.1.apk</a>：把这个网页转换成手机应用程序。左右滑动方便找书。<br>
+        <a href="{{urls[3]}}">网易云音乐下载器.apk</a>：能够按单曲/歌单下载网易云vip歌曲，但是付费歌曲暂时下载不能。<br>
+        <a href="{{urls[4]}}">方寸之间.apk</a>：聊天软件(笑)。有音乐下载、聊天、网盘储存等等功能。<br>
         
         <h4 class="mdui-text-color-theme">版权声明</h4>
         <p>本网页工具仅为了方便读者阅读而设立，如果侵犯到您的权利，请联系<a target="_blank" href="https://github.com/LanceLiang2018">我的Github</a>或者我的邮箱LanceLiang2018@163.com，我将立即删除/屏蔽相关内容或者删除整个网站。</p>
         <h4 class="mdui-text-color-theme">欢迎反馈</h4>
+        <p>本网站2020/04/01~2020/06/09不会维护。</p>
         <div class="mdui-textfield mdui-textfield-floating-label">
-              <label class="mdui-textfield-label">名字以及邮箱等联系方式</label>
+              <label class="mdui-textfield-label">邮箱等联系方式</label>
               <input class="mdui-textfield-input" id="wenku8-feedback-user"/>
             </div>
         <div class="mdui-textfield mdui-textfield-floating-label">
-          <label class="mdui-textfield-label">反馈意见/吐槽</label>
+          <label class="mdui-textfield-label">反馈/意见/吐槽</label>
           <textarea class="mdui-textfield-input" id="wenku8-feedback-message"></textarea>
         </div>
         <button class="mdui-btn mdui-ripple mdui-color-theme" onclick="wenku8Feedback()">吐</button>
@@ -237,28 +228,28 @@ var _hmt = _hmt || [];
             <input type="hidden" name="method" value="name">
             <input class="button" type="submit" value="按名字搜书"><input name="search_key" type="text"><br>
         </form>
-<!--
+        {% if local == True %}
         <form action="/search" method="get">
             <input type="hidden" name="method" value="id">
             <input class="button" type="submit" value="按ID找书"><input name="search_key" type="text"><br>
         </form>
--->
+        {% endif %}
         <form action="/search" method="get">
             <input type="hidden" name="method" value="cache">
             <input class="button" type="submit" value="按ID缓存"><input name="search_key" type="text"><br>
         </form>
-<!--
+        {% if local == True %}
         <form action="/search" method="get">
             <input type="hidden" name="method" value="cache_img">
             <input class="button" type="submit" value="按ID缓存(包含图片)"><input name="search_key" type="text"><br>
         </form>
--->
+        {% endif %}
       </div>
     </div>
 </div>
 
 
-<script src="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/js/mdui.js"></script>
+<script src="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/js/mdui.min.js"></script>
 <script>var $$ = mdui.JQ;</script>
 <script src="/static/wenku8.js"></script>
 
