--- a/templates/index.html
+++ b/templates/index.html
@@ -241,7 +241,7 @@
             <div id="wenku8-chat" style="overflow-y:scroll; height: 200px; font-size: 15; font-weight: 700;">
                 <div style="display: none;" id="wenku8-chat-box-outline">
                     <div class="wenku8-chat-box" style="display: flex; justify-content: flex-start; flex-wrap: nowrap;">
-                        <img src="" class="round_icon wenku8-chat-head">
+                        <img src="" class="round_icon wenku8-chat-head" style="min-width: 34px;">
                         <span class="wenku8-chat-user">Lance</span>：<span class="wenku8-chat-message">message</span>
                     </div>
                 </div>
