--- a/templates/index.html
+++ b/templates/index.html
@@ -264,6 +264,27 @@
                 <button class="mdui-btn mdui-ripple mdui-color-theme mdui-float-left" onclick="wenku8Feedback()">吐</button>
                 <button class="mdui-btn mdui-ripple mdui-color-theme mdui-float-left" onclick="wenku8ShowAdmin()">管理员登录</button>
             </div>
+            
+            <div id="wenku8-chat2" style="overflow-y:scroll; height: 200px; font-size: 15; font-weight: 700;">
+                <div style="display: none;" id="wenku8-chat2-xb-box-outline">
+                    <div class="wenku8-chat2-xb-box" style="display: flex; justify-content: flex-start; flex-wrap: nowrap;">
+                        <img src="https://gss3.bdstatic.com/84oSdTum2Q5BphGlnYG/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=91d370dfa6a8ea0ef90415e7b676b771&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F5366d0160924ab185c3cc54e36fae6cd7b890ba4.jpg" class="round_icon wenku8-chat2-xb-head" style="min-width: 34px;">
+                        <span class="wenku8-chat2-xb-user">小冰</span>：<span class="wenku8-chat2-xb-message">message</span>
+                    </div>
+                </div>
+                <div style="display: none;" id="wenku8-chat2-me-box-outline">
+                    <div class="wenku8-chat2-me-box" style="display: flex; justify-content: flex-start; flex-wrap: nowrap;">
+<!--                        <img src="" class="round_icon wenku8-chat2-me-head" style="min-width: 34px;">-->
+                        <span class="wenku8-chat2-me-user">我</span>：<span class="wenku8-chat2-me-message">message</span>
+                    </div>
+                </div>
+            </div>
+            <div class="mdui-textfield">
+                <input class="mdui-textfield-input" type="text" placeholder="和小冰聊天！" id="wenku8-chat-me-message"/>
+            </div>
+            <div style="height: 36px;">
+                <button class="mdui-btn mdui-ripple mdui-color-theme mdui-float-left" onclick="wenku8Chat()">SAY</button>
+            </div>
         </div>
         <br>
         <div>
