--- a/templates/index.html
+++ b/templates/index.html
@@ -225,9 +225,9 @@
             </div>
             {% endif %}
 
-            <h3 class="mdui-color-theme">相关软件下载&#43;相关链接</h3>
+            <h3 class="mdui-text-color-theme">相关软件下载&#43;相关链接</h3>
             <p>下面是时效30分钟的临时链接。</p>
-            <a href="{{urls[0]}}" class="mdui-text-color-theme">wk8local.exe</a>：大小57MB。是本网页的本地版，没有服务器带宽限制，能够下载电子书图片，推荐下载。<br>
+            <a href="{{urls[0]}}" class="mdui-color-theme">wk8local.exe</a>：大小57MB。是本网页的本地版，没有服务器带宽限制，能够下载电子书图片，推荐下载。<br>
             <a href="{{urls[1]}}">Wenku8ToEpub.exe</a>：大小8MB。本地命令行软件，能够下载更大的书籍，但是使用不是很人性化。
             <a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
             <a href="{{urls[2]}}">Wenku8下载_1.1.apk</a>：把这个网页转换成手机应用程序。左右滑动方便找书。<br>
