更换为百度云链接

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,14 +229,15 @@
             <p>下面是时效30分钟的临时链接。</p>
             <a href="{{urls[0]}}" class="mdui-color-theme">wk8local.exe</a>：大小57MB。是本网页的本地版，没有服务器带宽限制，能够下载电子书图片，推荐下载。<br>
             <a href="{{urls[1]}}">Wenku8ToEpub.exe</a>：大小8MB。本地命令行软件，能够下载更大的书籍，但是使用不是很人性化。
-            <a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
+            <a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a>[已经更换为百度云链接，提取码6gxl]<br>
             <a href="{{urls[2]}}">Wenku8下载_1.1.apk</a>：把这个网页转换成手机应用程序。左右滑动方便找书。<br>
             <a href="{{urls[3]}}">网易云音乐下载器.apk</a>：能够按单曲/歌单下载网易云vip歌曲，但是付费歌曲暂时下载不能。<br>
             <a href="{{urls[4]}}">方寸之间.apk</a>：聊天软件(笑)。有音乐下载、聊天、网盘储存等等功能。<br>
             <p>下面是一些相关链接。</p>
             <a href="https://light-opds.herokuapp.com/" target="_blank">本站OPDS书源</a>：使用支持OPDS的阅读器可以添加←链接来下载书籍。<br>
-            <a href="https://blog.lanceliang2001.top/chat/" target="_blank">在线聊天室(自制前端)</a>：如名。<br>
-            <a href="http://chat.henrize.kim:3000/" target="_blank">在线聊天室(官方)</a>：如名。<br>
+            <a href="http://blog.lanceliang2001.top/chat/" target="_blank">henrize在线聊天室(自制前端)</a>：如名。<br>
+            <a href="http://blog.lanceliang2001.top/chat2/" target="_blank">hack.chat在线聊天室(自制前端)</a>：如名。<br>
+            <a href="http://chat.henrize.kim:3000/" target="_blank">henrize在线聊天室(官方)</a>：如名。<br>
 
             <h4 class="mdui-text-color-theme">版权声明</h4>
             <p>本网页工具仅为了方便读者阅读而设立，如果侵犯到您的权利，请联系<a target="_blank" href="https://github.com/LanceLiang2018">我的Github</a>或者我的邮箱LanceLiang2018@163.com，我将立即删除/屏蔽相关内容或者删除整个网站。
