--- a/templates/index.html
+++ b/templates/index.html
@@ -72,23 +72,23 @@
 
 <div class="mdui-drawer" id="main-drawer">
     <div class="mdui-list" mdui-collapse="{accordion: true}" style="margin-bottom: 76px;">
-        <div class="mdui-collapse-item ">
-            <div class="mdui-collapse-item-header mdui-list-item mdui-ripple">
-              <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color">near_me</i>
-              <div class="mdui-list-item-content">WENKU8TOEPUB-ONLINE</div>
-              <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
-            </div>
-            <div class="mdui-collapse-item-body mdui-list">
-              <a href="https://github.com/LanceLiang2018/Wenku8ToEpub-Online"
-               class="mdui-list-item mdui-ripple">关于</a>
-            </div>
-            <div class="mdui-collapse-item-body mdui-list">
-              <a href="https://lanceliang2018.github.io/" class="mdui-list-item mdui-ripple">我的博客</a>
-            </div>
-            <div class="mdui-collapse-item-body mdui-list">
-              <a href="javascript:;" onclick="new mdui.Dialog($('#dialog-donation')).open();" class="mdui-list-item mdui-ripple">捐助</a>
-            </div>
-        </div>
+        <ul class="mdui-list">
+            <li class="mdui-list-item mdui-ripple">
+                <a href="https://github.com/LanceLiang2018/Wenku8ToEpub-Online" target="_blank" class="mdui-list-item mdui-ripple" style="width: 100%"><i class="mdui-icon material-icons">feedback</i>关于</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+                <a href="http://blog.lanceliang2001.top/" target="_blank" class="mdui-list-item mdui-ripple"><i class="mdui-icon material-icons" style="width: 100%">book</i>博客</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+                <a href="javascript:;" onclick="new mdui.Dialog($('#dialog-donation')).open();" class="mdui-list-item mdui-ripple" style="width: 100%"><i class="mdui-icon material-icons">attach_money</i>捐助</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+                <a href="http://blog.lanceliang2001.top/chat" target="_blank" class="mdui-list-item mdui-ripple" style="width: 100%"><i class="mdui-icon material-icons">chat</i>聊天</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+                <a href="/opds/" target="_blank" class="mdui-list-item mdui-ripple" style="width: 100%"><i class="mdui-icon material-icons">bookmark</i>OPDS</a>
+            </li>
+        </ul>
     </div>
 </div>
 
